# rust-clean-architecture

./: Cargo.toml
adapters/: Cargo.toml
adapters/src/: lib.rs
adapters/src/api/controllers/user/: create_user.rs
adapters/src/controllers/user/: create_user.rs
adapters/src/http/: mod.rs
adapters/src/interfaces/: presenter.rs
adapters/src/repositories/: mod.rs
adapters/src/repositories/mysql/: user_repository.rs
adapters/src/rest/axum/: mod.rs
adapters/src/rest/axum/handlers/: create_user.rs  get_user_by_id.rs
adapters/src/rest/axum/routes/: mod.rs  user_router.rs
adapters/src/rest/axum/shared/: api_response.rs  errors.rs  mod.rs  states.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/gateways/: mod.rs
application/src/gateways/authentication/: jwt_token_generator.rs  jwt_token_parser.rs  mod.rs
application/src/gateways/notifications/: mod.rs  send_welcome_email.rs
core/: Cargo.toml
core/src/domain/: book.rs  member.rs  mod.rs
core/src/entities/: user.rs
core/src/use_cases/: mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/entities/: user.rs
domain/src/repositories/: user_repository.rs
domain/src/v2/: mod.rs
infrastructure/: Cargo.toml
infrastructure/src/services/: mod.rs
infrastucture/: Cargo.toml
internal_core/: Cargo.toml
internal_core/src/use_cases/: mod.rs
src/: main.rs
src/application/: article_repository.rs  mod.rs
src/application/use_cases/: change_article_status.rs  create_article.rs  delete_article.rs  mod.rs  update_article.rs
src/domain/entities/: article.rs
(+51 files in other folders)
