[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
emval = "0.1.5"
